fixed mobile viewport & background of main section on small screen

--- a/less/style.less
+++ b/less/style.less
@@ -64,14 +64,16 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden; // prevents transformed elements overflowing page bounds - especially nasty on phones
+}
+
 body {
   font: 18px/1.5 @base-font;
   background-color: @background-color;
   color: @text-color;
   text-shadow: 0px 1px 0px white;
   text-shadow: 1px 1px 0px rgba(255,255,255,0.5);
-  width: 100%;
-  overflow-x: hidden;
 }
 
 blockquote {
@@ -314,10 +316,14 @@ ul.tags {
 
   &:before {
     top: 0;
-    left: -10%;
-    width: 120%;
+    left: -50%;
+    width: 200%;
     height: 100%;
-    transform: skew(-4deg, 0deg) rotate(-3deg) scale(1.2, 1);
+    transform: skew(-4deg, 0deg) rotate(-3deg);
+    @media only screen and (min-width: @break-tablet) {
+      left: -20%;
+      width: 140%;
+    }
   }
 
   h1 a {
